fix unwanted horizontal scrolling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,6 @@
+html, body {
+   overflow-x: hidden;
+}
 #navbar{
     background-color: #151515;
 }
